tests/ui/borrowck/issue-88434-minimal-example.stderr
error[E0080]: evaluation panicked: explicit panic
  --> $DIR/issue-88434-minimal-example.rs:5:22
   |
LL | const _CONST: &() = &f(&|_| {});
   |                      ^^^^^^^^^^ evaluation of constant value failed here
   |
note: inside `f::<{closure@$DIR/issue-88434-minimal-example.rs:5:25: 5:28}>`
  --> $DIR/issue-88434-minimal-example.rs:12:5
   |
LL |     panic!()
   |     ^^^^^^^^ the failure occurred here

note: erroneous constant encountered
  --> $DIR/issue-88434-minimal-example.rs:5:21
   |
LL | const _CONST: &() = &f(&|_| {});
   |                     ^^^^^^^^^^^

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0080`.
